@@ -25,14 +25,13 @@
     </modules>
 
     <properties>
-        <!--<sonar.sources>src/main</sonar.sources>
-        <sonar.tests>src/test</sonar.tests>-->
 
-        <jacoco.version>0.7.9</jacoco.version>
-        <sonar.jacoco.reportPaths>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPaths>
+
+        <!--<sonar.jacoco.reportPaths>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPaths>
         <sonar.jacoco.itReportPaths>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPaths>
+        <jacoco.version>0.7.9</jacoco.version>
         <sonar.language>java</sonar.language>
-        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>-->
 
         <sonar.exclusions>
             **/config/*,
@@ -43,15 +42,6 @@
             **/model/*
         </sonar.exclusions>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <profiles>
         <profile>
@@ -65,58 +55,24 @@
                 </sonar.host.url>
             </properties>
             <build>
-                <!--<pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.jacoco</groupId>
-                            <artifactId>jacoco-maven-plugin</artifactId>
-                            <version>0.7.9</version>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>-->
                 <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <configuration>
+                            <!-- Jacoco prepare-agent builds some command-line params without -->
+                            <!-- which jacoco will not instrument. Hence it is important to add -->
+                            <!-- those command-line params here (${argLine} holds those params) -->
+                            <argLine>${argLine} -Xms256m -Xmx2048m</argLine>
+                            <forkCount>1</forkCount>
+                            <runOrder>random</runOrder>
+                        </configuration>
+                    </plugin>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>${jacoco.version}</version>
                         <executions>
-                            <execution>
-                                <id>agent-for-ut</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                                <configuration>
-                                    <append>true</append>
-                                    <destFile>${sonar.jacoco.reportPaths}</destFile>
-                                    <!--<propertyName>surefireArgLine</propertyName>-->
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>agent-for-it</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>prepare-agent-integration</goal>
-                                </goals>
-                                <configuration>
-                                    <append>true</append>
-                                    <destFile>${sonar.jacoco.itReportPaths}</destFile>
-                                    <!--<propertyName>failsafeArgLine</propertyName>-->
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>jacoco-site</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>report</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
                             <execution>
                                 <id>report-aggregate</id>
                                 <phase>verify</phase>
@@ -126,41 +82,6 @@
                             </execution>
                         </executions>
                     </plugin>
-
-                    <!--<plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.20</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.apache.maven.surefire</groupId>
-                                <artifactId>surefire-testng</artifactId>
-                                <version>2.20</version>
-                            </dependency>
-                        </dependencies>
-                        <configuration>
-                            <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m ${surefireArgLine}</argLine>
-                            <skipTests>${skipTests}</skipTests>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.20</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>integration-test</goal>
-                                    <goal>verify</goal>
-                                </goals>
-                                <configuration>
-                                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
-                                    <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m ${failsafeArgLine}</argLine>
-                                    <skipTests>${skipTests}</skipTests>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>-->
                 </plugins>
             </build>
         </profile>
